[gd_scene load_steps=14 format=2]

[ext_resource path="res://entity/ghoul.gd" type="Script" id=1]
[ext_resource path="res://entity/fx/health_bar.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/entity/ghoul/burning-ghoul5.png" type="Texture" id=3]
[ext_resource path="res://assets/entity/ghoul/burning-ghoul4.png" type="Texture" id=4]
[ext_resource path="res://assets/entity/ghoul/burning-ghoul3.png" type="Texture" id=5]
[ext_resource path="res://assets/entity/ghoul/burning-ghoul2.png" type="Texture" id=6]
[ext_resource path="res://assets/entity/ghoul/burning-ghoul1.png" type="Texture" id=7]
[ext_resource path="res://assets/entity/ghoul/burning-ghoul6.png" type="Texture" id=8]
[ext_resource path="res://assets/entity/ghoul/burning-ghoul8.png" type="Texture" id=9]
[ext_resource path="res://assets/entity/ghoul/burning-ghoul7.png" type="Texture" id=10]
[ext_resource path="res://assets/light.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=77]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=78]
extents = Vector2( 20, 30 )

[node name="ghoul" type="KinematicBody2D" groups=["fire_resist"]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -11 )
scale = Vector2( 1.36842, 1.36842 )
frames = SubResource( 77 )
animation = "walk"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 78 )

[node name="RayCastLeft2" type="RayCast2D" parent="."]
position = Vector2( -23, 0 )
enabled = true
cast_to = Vector2( -30, -0.006 )
collide_with_areas = true

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2( -48, 0 )
enabled = true
cast_to = Vector2( 0, 150 )
collide_with_areas = true

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2( 47, 0 )
enabled = true
cast_to = Vector2( 0, 150 )

[node name="RayCastRight2" type="RayCast2D" parent="."]
position = Vector2( 22, 0 )
enabled = true
cast_to = Vector2( 30, 0 )

[node name="health_bar" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 0, -39 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -2.38419e-07, -17 )
scale = Vector2( 0.78, 0.78 )
texture = ExtResource( 11 )
color = Color( 0.960784, 0.32549, 0.0784314, 1 )
energy = 1.4
